# tetris-assembly-ws

./: .gitmodules  Dockerfile  README.md  docker-compose.yml
src/spatial_ai_navigation/: CMakeLists.txt  package.xml
src/spatial_ai_navigation/config/: cartographer_2d.lua  nav2_failed_preferforward_params.yaml  nav2_fast_speed_params.yaml  nav2_params.yaml
src/spatial_ai_navigation/launch/: cartographer.launch.py  navigation.launch.py  spatial_ai_mapping.launch.py  spatial_ai_mapping_navigation.launch.py  spatial_ai_navigation.launch.py
src/spatial_ai_navigation/map/: spatial_ai_map.pgm  spatial_ai_map.yaml
src/spatial_ai_simulation/worlds/: spatial_ai_station.world
src/tutorials/: Tutorial_Detection_complete_with_KITTI_and_LiDAR.ipynb
src/tutorials/camera_calibration/: README.md  aruco_marker_pose_estimation.ipynb  line_detection.ipynb  webcam_publisher.py
src/tutorials/camera_lidar_calibration/: cameraLidarCalicration.ipynb
src/tutorials/camera_projection/: README.md  camera_projection_exercise.ipynb
src/tutorials/hand_eye_calibration/: README.md  hand_in_eye_calibration.ipynb  intrinsic_params.json  jointPositions.json
src/tutorials/hand_eye_calibration/calibrationData/: Hcw_c.mat  jntconfig.mat
src/tutorials/lidar_motion_compensation/: README.md  app.js  index.html  style.css
src/tutorials/localization_and_mapping/: README.md  amcl_dump.yaml  map.pgm  map.yaml  nav2_params.yaml  ros2_nav2_tutorial.ipynb
src/tutorials/navigation/: README.md  Tutorial.md
src/tutorials/sensor_datasheet/: README.md  sensor_datasheet_quiz.ipynb
